Add warning about Stats API beta status in getting started documentation
- Included a warning callout in the 'getting-started' page of the Stats API documentation to inform users that the API is currently in beta and may undergo breaking changes.
- This addition aims to enhance user awareness and prepare them for potential updates as the API evolves.

--- a/docs/content/docs/api/stats/getting-started.mdx
+++ b/docs/content/docs/api/stats/getting-started.mdx
@@ -5,6 +5,10 @@ description: Authentication, common parameters, and best practices for the Rybbi
 
 import { TypeTable } from 'fumadocs-ui/components/type-table';
 
+<Callout type="warn">
+The Stats API is currently in beta. There may be breaking changes as we continue to improve and expand the API.
+</Callout>
+
 ## Authentication
 
 All API requests must include authentication using one of the following methods:
